# audiblez-chatterbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
audiblez/: __init__.py  cli.py  core.py  database.py  ui.py
audiblez/tests/: test_plan_queue.md
test/: test_cli.py
