[project]
name = "audiblez"
version = "0.5.1"
description = "Generate audiobooks from e-books (epub to m4b)"
authors = [
    { name = "Stoobs"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ebooklib (>=0.18,<0.19)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pick (>=2.4.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "spacy (>=3.8.3,<4.0.0)",
    "chatterbox-tts @ git+https://github.com/resemble-ai/chatterbox.git",
    "tabulate (>=0.9.0,<0.10.0)",
]
exclude = [
    "imgs",
    "test",
    "*.wav",
    "*.m4b",
    "cover",
    "chapters.txt"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Documentation = "https://github.com/Stoobs/audiblez-chatterbox"
Repository = "https://github.com/Stoobs/audiblez-chatterbox"
Issues = "https://github.com/Stoobs/audiblez-chatterbox/issues"

[project.scripts]
audiblez = "audiblez.cli:cli_main"
audiblez-ui = "audiblez.ui:main"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"